--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "php": ">=5.4.0",
         "kpacha/config": "~0.1",
         "sensiolabs/consul-php-sdk": "dev-master"
     },
